# my_deltamodel

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  tmp.py
dmg/: __init__.py
dmg/core/calc/: metrics.py
dmg/core/data/: __init__.py  data.py
dmg/core/post/: plot_baseflowindex_scatter.py  plot_cdf.py  plot_diff_hist.py  plot_geo.py  plot_line.py  plot_parameters.py  plot_statbox.py
dmg/core/utils/: __init__.py  conf.py  factory.py  path.py  utils.py
dmg/models/: model_handler.py
dmg/models/delta_models/: dpl_model.py
dmg/models/hydrodl2/: __init__.py  uh_routing.py  utils.py
dmg/models/neural_networks/: gru_mlp.py  hope_mlp_v1.py  hope_mlp_v2.py  (+8 more)
dmg/trainers/: pub_trainer.py  trainer.py
example/conf/: config_dblend_dv2.yaml  config_dblendv1.yaml  config_dblendv3.yaml  config_dblendv4.yaml  config_dblendv5.yaml  config_dhbv_1_1p.yaml  config_dhmets_base.yaml  config_dhmets_test.yaml
example/hydrology/: example_dhbv.ipynb  example_dhbv_1_1p.ipynb
project/better_estimate/: README.md  pub_hopev1.py  pub_lstm.py  run_gru.py  run_hope.py  run_hopev1.py  run_hopev2.py  run_lstm.py  run_pure_hope.cmd  run_pure_hope.py  run_pure_lstm.cmd  run_tcn.py  run_transformer.py  run_tsmixer.py
project/better_train/: demo1.py  demo2.py
project/dual_attn_bilstm/: README.md  find_good_rnn.py  mamba.py  run_dalstm.py  train_ms_model.py
project/hydro_selection/: README.md  TODO.md  check_data.ipynb  compare_streamflows.py  investigate_modelstates.py  run_blendv3.py  run_blendv4.py  run_blendv5.py  run_dhbv.py  run_dhmets.py  run_hbv_moe.py  run_hmets.py  run_model.py  visual_blend_weight.py
project/triton_accelerate/: __init__.py  run_autograd.py  run_models.py  run_modelsv2.py
project/triton_accelerate_fused/: run_models.py
tests/: hbv_triton_autograd.py  test_ct_model.py  test_exphydro.py  test_hope_model.py  test_hymod.py
(+191 files in other folders)
