[project]
name = "generic_deltamodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "neuralhydrology>=1.12.0",
    "numpy>=2.3.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.1",
    "pytorch-lightning>=2.5.5",
    "pydantic>=2.11.5",
    "scipy>=1.16.2",
    "sktime>=0.38.5",
    "scikit-learn>=1.7.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torchrecurrent>=0.1.11",
    "tqdm>=4.67.1",
    "uv>=0.7.12",
    "zarr>=3.0.8",
    "einops>=0.8.1",
    "cartopy>=0.25.0",
    "geopandas>=1.1.1",
    "pytest>=8.4.2",
    "torch[cu128]>=2.8.0",
    "dotenv>=0.9.9",
    "rich>=14.2.0",
    "scienceplots>=2.1.1",
    "captum>=0.7.0",
    "pytorch-tcn>=1.2.3",
    "xlstm>=2.0.5",
    "cdsapi>=0.7.7",
    "rioxarray>=0.19.0",
    "cfgrib>=0.9.15.1",
    "pytorch-tsmixer>=0.2.0",
    "plotly>=6.4.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.8.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.8.0",
  "torchvision>=0.22.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ty.rules]
unresolved-attribute = "ignore"
